# ContinuityAgent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/: index.html
client/src/: dataClient.ts  filePayload.ts  main.tsx  styles.css
docs/: AGENT_SETUP.md  API.md  DEMO_SCRIPT.md  LAUNCH.md  OUTREACH.md  PRODUCT_PAGE_COPY.md  RELEASE_CHECKLIST.md
fixtures/azari-continuity-trial/: README.md  package.json
fixtures/azari-continuity-trial/docs/: why-layer.md
fixtures/azari-continuity-trial/src/: index.ts
fixtures/azari-style-stability-fixture/: README.md  package.json
fixtures/azari-style-stability-fixture/.pytest_cache/: README.md
fixtures/azari-style-stability-fixture/docs/: old-authority-note.md  why-layer.md
fixtures/azari-style-stability-fixture/src/: index.ts
fixtures/azari-style-stability-fixture/tools/: system_sweep.js
scripts/: continuity-api.mjs  continuity-cli.mjs  continuity-mcp.mjs  smoke-check.mjs  tauri-win-build.cmd  tauri-win-dev.cmd
server/src/: ai.ts  app.ts  continuity.ts  db.ts  discovery.ts  export.ts  folders.ts  index.ts  workflows.ts
shared/: types.ts
site/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: api.test.ts  continuity.test.ts  discovery.test.ts  filePayload.test.ts  heuristics.test.ts  workflows.test.ts
