[package]
name = "continuity-layer"
version = "0.1.0"
description = "Continuity Layer desktop app"
authors = ["Continuity Layer"]
edition = "2021"

[lib]
name = "continuity_layer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
